fix:样式fieSet、image、collapse

--- a/scss/themes/cxd.scss
+++ b/scss/themes/cxd.scss
@@ -127,7 +127,7 @@
   .#{$ns}InputGroup-btn .#{$ns}Button {
     border-radius: px2rem(3px);
   }
-  
+
   .#{$ns}InputGroup-btn:last-child .#{$ns}Button {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
@@ -335,6 +335,26 @@
       margin-right: #{px2rem(16px)};
       font-size: #{$T3};
       color: #{$G4};
+    }
+  }
+}
+
+//FieldSet Form + Collapse
+.#{$ns}Form {
+  .#{$ns}Collapse {
+    border: none;
+
+    &-arrow {
+      margin-left: px2rem(8px);
+    }
+    &-header {
+      background-color: var(--white);
+      display: inline-flex;
+      justify-content: flex-end;
+      flex-direction: row-reverse;
+    }
+    &-content {
+      padding: 0;
     }
   }
 }
